--- a/empleados/templates/home/add.html
+++ b/empleados/templates/home/add.html
@@ -1,2 +1,6 @@
 <h2>Probando CreateView</h2>
-{{form}}
+<form method="POST">
+    {% csrf_token %}
+    {{form.as_p}}
+    <button type="submit">Agregar</button>
+</form>
