--- a/empleados/templates/includes/header.html
+++ b/empleados/templates/includes/header.html
@@ -3,9 +3,9 @@
         <ul class="dropdown menu" data-dropdown-menu>
             <li class="menu-text">Empleados</li>
             <li>
-                <a href="#">Listar</a>
+                <a href="{% url 'personas_app:empleados_all' %}">Listar</a>
             </li>
-            <li><a href="#">Departamentos</a></li>
+            <li><a href="{% url 'departamentos_app:departamento_list' %}">Departamentos</a></li>
             <li><a href="#">Administrar</a></li>
         </ul>
     </div>
