--- a/empleados/templates/includes/header.html
+++ b/empleados/templates/includes/header.html
@@ -6,13 +6,14 @@
                 <a href="{% url 'personas_app:empleados_all' %}">Listar</a>
             </li>
             <li><a href="{% url 'departamentos_app:departamento_list' %}">Departamentos</a></li>
-            <li><a href="#">Administrar</a></li>
+            <li><a href="{% url 'personas_app:empleados_admin' %}">Administrar</a></li>
+            <li><a href="{% url 'departamentos_app:nuevo_departamento' %}">Nuevo Departamento</a></li>
         </ul>
     </div>
     <div class="top-bar-right">
         <ul class="menu">
             <li><input type="search" placeholder="Buscar empleado"></li>
-            <li><button type="button" class="button">Registrar Nuevo</button></li>
+            <li><a href="{% url 'personas_app:empleado_add' %}" class="button">Registrar Nuevo</a></li>
         </ul>
     </div>
 </div>
