--- a/empleados/templates/personas/add.html
+++ b/empleados/templates/personas/add.html
@@ -1,7 +1,50 @@
-<h1>Registrar Personas</h1>
+{% extends 'base.html' %}
 
-<form method="POST">
-    {% csrf_token %} 
-    {{ form.as_p }}
-    <button type="submit">Agregar</button>
-</form>
+{% block title %} Registrar Empleado {% endblock title %}
+
+{% block content %}
+
+    {% include 'includes/header.html' %}
+
+    <div class="grid-container">
+        <div class="grid-x">
+            <h1 class="cell">Registrar Empleados</h1>
+            <form class="cell grid-x grid-margin-x" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                    <div class="cell large-6">
+                        <label>Nombres:
+                            {{ form.first_name }}
+                        </label>
+                    </div>
+                    <div class="cell large-6">
+                        <label>Apellidos:
+                            {{ form.last_name }}
+                        </label>
+                    </div>
+                    <div class="cell large-6">
+                        <label>Trabajo:
+                            {{ form.job }}
+                        </label>
+                    </div>
+                    <div class="cell large-6">
+                        <label>Departamento:
+                            {{ form.departamento }}
+                        </label>
+                    </div>
+                    <div class="cell large-6">
+                        <label>Habilidades:
+                            {{ form.habilidades }}
+                        </label>
+                    </div>
+                    <div class="cell large-6">
+                        <label>Avatar:
+                            {{ form.avatar }}
+                        </label>
+                    </div>
+                    <div class="cell large-12">
+                        <button type="submit" class="success button">Crear Nuevo</button>
+                    </div>
+            </form>
+        </div>
+    </div>
+{% endblock content %}
