--- a/empleados/templates/personas/update.html
+++ b/empleados/templates/personas/update.html
@@ -1,7 +1,49 @@
-<h1>Modificar Datos de Empleado</h1>
+{% extends 'base.html' %}
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Actualizar</button>
-</form>
+{% block title %} Editar Empleado {% endblock title %}
+
+{% block content %}
+
+    {% include 'includes/header.html' %}
+    <div class="grid-container">
+        <div class="grid-x">
+            <h1 class="cell">
+                Modificar Datos de Empleado
+            </h1>
+            <div class="cell">
+                <form class="grid-x grid-margin-x" method="POST">
+                    {% csrf_token %}
+                    <div class="cell large-6">
+                        <label>Nombres:
+                            {{ form.first_name }}
+                        </label>
+                    </div>
+                    <div class="cell large-6">
+                        <label>Nombres:
+                            {{ form.last_name }}
+                        </label>
+                    </div>
+                    <div class="cell large-6">
+                        <label>Apellidos:
+                            {{ form.job }}
+                        </label>
+                    </div>
+                    <div class="cell large-6">
+                        <label>Departamento:
+                            {{ form.departamento }}
+                        </label>
+                    </div>
+                    <div class="cell large-6">
+                        <label>Habilidades:
+                            {{ form.habilidades }}
+                        </label>
+                    </div>
+                    <div class="cell">
+                        <button type="submit" class="success button">Actualizar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    
+{% endblock content %}
